--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,6 +1,6 @@
 .main-wrapper {
   padding: 20px 50px;
-  background-color: cadetblue;
-  flex: 1 0 auto; }
+  flex: 1 0 auto;
+  background-color: whitesmoke; }
 
 /*# sourceMappingURL=Main.css.map */
