--- a/src/sass/Main.scss
+++ b/src/sass/Main.scss
@@ -1,5 +1,5 @@
 .main-wrapper {
     padding: 20px 50px;
-    background-color: cadetblue;
     flex: 1 0 auto;
+    background-color: whitesmoke;
 }
