--- a/src/sass/ReportPreview.scss
+++ b/src/sass/ReportPreview.scss
@@ -1,20 +1,13 @@
 .report-preview-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 	padding: 10px;
 	margin: 10px auto;
-	background-color: floralwhite;
+	background-color: antiquewhite;
 
 	div {
         padding: 0 10px;
         flex: 0 33%;
-
-		// &:before {
-		// 	border-left: 1px solid black;
-		// 	display: inline;
-		// 	content: '';
-		// 	padding-left: 5px;
-		// }
 	}
 }
 
