--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -12,4 +12,9 @@
 button {
     padding: 5px 20px;
     font-family: inherit;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
 }
