--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,6 +1,11 @@
+header {
+    background-color: #91B7C7;
+}
+
 .header-wrapper {
     padding: 0px 50px;
-    background-color: antiquewhite;
+    margin: 0 auto;
+    max-width: 1024px;
 }
 
 .nav-wrapper {
