--- a/src/sass/ReportPreview.scss
+++ b/src/sass/ReportPreview.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: flex-start;
 	padding: 10px;
-	margin: 10px auto;
-	background-color: antiquewhite;
+	margin: 20px auto;
+	background-color: #91B7C7;
 
 	div {
         padding: 0 10px;
