--- a/src/css/ReportPreview.css
+++ b/src/css/ReportPreview.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: flex-start;
   padding: 10px;
-  margin: 10px auto;
-  background-color: antiquewhite; }
+  margin: 20px auto;
+  background-color: #91B7C7; }
   .report-preview-container div {
     padding: 0 10px;
     flex: 0 33%; }
