--- a/src/sass/Main.scss
+++ b/src/sass/Main.scss
@@ -1,5 +1,10 @@
+main {
+    background-color: #DEE7E7;
+    flex: 1 0 auto;
+}
+
 .main-wrapper {
     padding: 20px 50px;
-    flex: 1 0 auto;
-    background-color: whitesmoke;
+    margin: 0 auto;
+    max-width: 1024px;
 }
