--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,10 +5,27 @@
 	src: url('./fonts/ADAM.CG PRO.otf');
 }
 
+html {
+	font-family: 'Adam CG Pro';
+	font-size: 16px;
+	color: #04030F;
+	box-sizing: border-box;
+}
+
+* {
+	&::after, &::before {
+		box-sizing: inherit;
+	}
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	min-height: 100vh;
+}
+
 body {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
-    font-family: 'Adam CG Pro';
-    font-size: 16px;
-    max-width: 1200px;
 }
