--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,7 @@ html {
   box-sizing: border-box; }
 
 *::after, *::before {
-  box-sizing: inherit; }
+  box-sizing: border-box; }
 
 #root {
   display: flex;
