--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -11,15 +11,32 @@ header {
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
+}
+
+.nav-title {
     padding: 20px 0;
 }
 
-button {
-    padding: 5px 20px;
-    font-family: inherit;
+.nav-links {
+    height: inherit;
 
-    a {
-        text-decoration: none;
-        color: inherit;
+    button {
+        height: 100%;
+        border: none;
+        padding: 5px 20px;
+        font-family: inherit;
+        font-size: inherit;
+        background-color: #91B7C7;
+    
+        a {
+            text-decoration: none;
+            display: block;
+            color: inherit;
+        }
+
+        &:hover {
+            background-color: #DEE7E7;
+            cursor: pointer;
+        }
     }
 }
