--- a/src/css/ReportPreview.css
+++ b/src/css/ReportPreview.css
@@ -5,7 +5,6 @@
   margin: 20px auto;
   background-color: #91B7C7; }
   .report-preview-container div {
-    padding: 0 10px;
     flex: 0 33%; }
 
 .report-preview-inner {
@@ -18,6 +17,9 @@
   display: flex; }
   .preview-icons div {
     flex: 0 50%; }
+  .preview-icons img {
+    max-width: 100%;
+    max-height: 100%; }
 
 .table-status-cell {
   text-indent: 0px;
