--- a/src/css/ReportPreview.css
+++ b/src/css/ReportPreview.css
@@ -13,6 +13,9 @@
   .report-preview-inner div {
     padding: 0 10px;
     flex: 0 33%; }
+    .report-preview-inner div:hover {
+      background-color: #DEE7E7;
+      cursor: pointer; }
 
 .preview-icons {
   display: flex; }
