--- a/src/sass/ReportPreview.scss
+++ b/src/sass/ReportPreview.scss
@@ -17,6 +17,11 @@
     div {
         padding: 0 10px;
         flex: 0 33%;
+        
+        &:hover {
+            background-color: #DEE7E7;
+            cursor: pointer;
+        }
     }
 }
 
