--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -1,11 +1,13 @@
 .search-field input {
   width: 250px;
   background: #fcfcfc;
-  border: 1px solid #aaa;
+  border: 3px solid #91B7C7;
   border-radius: 10px;
   font-size: inherit;
+  font-family: inherit;
+  color: inherit;
   text-indent: 32px;
-  padding: 5px;
+  padding: 10px 5px;
   background-image: url("https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-128.png");
   background-repeat: no-repeat;
   background-size: 30px 25px;
