--- a/src/sass/WizzardNav.scss
+++ b/src/sass/WizzardNav.scss
@@ -6,9 +6,20 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    
+    &:first-of-type {
+        border-bottom: 2px solid#04030f;
+    }
 
     li {
         padding: 20px 0 20px 20px;
+
+        span {
+            color: #868688;
+            font-size: 14px;
+            display: block;
+            padding: 10px 0;
+        }
     }
 
     .active {
