--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -30,4 +30,23 @@ header {
       background-color: #DEE7E7;
       cursor: pointer; }
 
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+  .header-wrapper {
+    padding: 0px 15px; }
+
+  .nav-links button {
+    padding: 5px; } }
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+  .header-wrapper {
+    padding: 0px 30px; }
+
+  .nav-links button {
+    padding: 5px; } }
+/* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .header-wrapper {
+    padding: 0px 50px; } }
+
 /*# sourceMappingURL=Header.css.map */
