--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -40,3 +40,36 @@ header {
         }
     }
 }
+
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+    .header-wrapper {
+        padding: 0px 15px;
+    }
+
+    .nav-links {
+        button {
+            padding: 5px;
+        }
+    }
+}
+
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+    .header-wrapper {
+        padding: 0px 30px;
+    }
+
+    .nav-links {
+        button {
+            padding: 5px;
+        }
+    }
+}
+
+/* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+    .header-wrapper {
+        padding: 0px 50px;
+    }
+}  
