--- a/src/sass/Search.scss
+++ b/src/sass/Search.scss
@@ -17,3 +17,30 @@
         background-position: left;
     }
 }
+
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+    .search-field {
+        input {
+            width: 100px;
+        }
+    }
+}
+
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+    .search-field {
+        input {
+            width: 175px;
+        }
+    }
+}
+
+/* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+    .search-field {
+        input {
+            width: 250px;
+        }
+    }
+}  
