--- a/src/sass/Wizzard.scss
+++ b/src/sass/Wizzard.scss
@@ -129,13 +129,20 @@
 		padding: 10px 0;
 
 		select,
-		input {
+		input,
+		textarea {
 			width: 100%;
+			border: 2px solid #91B7C7;
+			font-family: inherit;
+			padding: 5px;
+		}
+
+		select {
+			height: 32px;
 		}
 
 		textarea {
 			min-height: 150px;
-			width: 100%;
 			box-sizing: border-box;
 		}
 
@@ -174,4 +181,111 @@
 			}
 		}
 	}
+
+	.error-field {
+		font-size: 14px;
+		color: rgb(161, 5, 5);
+		padding-top: 10px;
+	}
 }
+
+.loader {
+    font-size: 10px;
+    margin: 50px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: #ffffff;
+    background: -moz-linear-gradient(left, #91B7C7 10%, rgba(255, 255, 255, 0) 42%);
+    background: -webkit-linear-gradient(left, #91B7C7 10%, rgba(255, 255, 255, 0) 42%);
+    background: -o-linear-gradient(left, #91B7C7 10%, rgba(255, 255, 255, 0) 42%);
+    background: -ms-linear-gradient(left, #91B7C7 10%, rgba(255, 255, 255, 0) 42%);
+    background: linear-gradient(to right, #91B7C7 10%, rgba(255, 255, 255, 0) 42%);
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  .loader:before {
+    width: 50%;
+    height: 50%;
+    background: #91B7C7;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+  }
+  .loader:after {
+    background: #DEE7E7;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  @-webkit-keyframes load3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes load3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+
+
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+	.wizzard-content-list {
+		li {
+			flex: 0 100%;
+		}
+	}
+}
+
+/* SMARTPHONES LANDSCAPE */
+@media only screen and (min-width: 480px) {
+	.wizzard-content-list {
+		li {
+			flex: 0 100%;
+		}
+	}
+}
+
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+	.wizzard-content-list {
+		li {
+			flex: 0 48%;
+		}
+	}
+}
+
+/* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+	.wizzard-content-list {
+		li {
+			flex: 0 48%;
+		}
+	}
+}  
